# xyzstyle-demo

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: deploy.yml
_sources/: index.md.txt
doc/: conf.py  index.md
doc/_static/: switcher.json
src/xyzstyle_demo/: __init__.py
