[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "xyzstyle_demo"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "d2py",
  "xyzstyle"
]

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/xyzstyle-demo"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "pytest",
  "pytest-regressions",
  "sphinxext-rediraffe",
  "sphinx-copybutton",
]

coverage = [
  "pytest-cov",
  "codecov",
  "xyzstyle_demo[test]",
]
dev = [
  "pyyaml",
  "pre-commit",
  "xyzstyle_demo[coverage]",
]
test = [
  "pytest",
  "xyzstyle_demo[doc]",
]

[project.entry-points]
"sphinx.html_themes" = {xyzstyle_demo = "xyzstyle_demo"}

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['docs', '.git', '.github']
